--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    text-align: center;
+}
+
 td {
     width: 100px;
     height: 100px;
@@ -19,4 +23,8 @@ table {
 .hori {
     border-top: 2px solid black;
     border-bottom: 2px solid black;
+}
+
+.reset {
+    text-align: center;
 }
