--- a/style.css
+++ b/style.css
@@ -11,18 +11,17 @@ td {
     height: 100px;
 }
 
-table {
-    margin: 5px auto;
+.game--board {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 306px;
+    margin: 50px auto;
 }
 
-.vert {
-    border-left: 2px solid black;
-    border-right: 2px solid black;
-}
-
-.hori {
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
+.cell {
+    width: 100px;
+    height: 100px;
+    border: 2px solid black;
 }
 
 .reset {
