--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
-h2 {
+body {
+    background-color: rgb(146, 217, 250);
+}
+
+h1 {
     text-align: center;
 }
 
 h3 {
     text-align: center;
-}
-
-td {
-    width: 100px;
-    height: 100px;
 }
 
 .game--board {
@@ -22,4 +21,11 @@ td {
     width: 100px;
     height: 100px;
     border: 2px solid black;
+    font-size: 50px;
+    text-align: center;
+    line-height: 100px;
+}
+
+.reset_game {
+    text-align: center;
 }
